--- a/styles.css
+++ b/styles.css
@@ -74,10 +74,64 @@ main {
   /* width: 100%; */
   height: 1000px;
   margin: 70px 150px;
-  border: 1px solid red;
 }
 
 header {
   display: grid;
   grid-template-columns: 50% 50%;
+}
+
+.header-left {
+  font-family: PT Serif;
+  font-weight: bold;
+  font-size: 26px;
+}
+
+.header-right {
+  font-family: Poppins;
+  font-size: 18px;
+}
+
+.header-right p {
+  font-weight: bold;
+}
+
+.header-right .header-paragraph {
+  font-weight: inherit;
+}
+
+.photo-top {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  justify-items: center;
+  margin-top: 96px;
+}
+
+.photo-top img {
+  width: 238px;
+}
+
+.photo-2,
+.photo-5 {
+  padding-top: 120px;
+}
+
+.photo-5 {
+  margin-bottom: 80px;
+}
+
+.photo-bottom {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  justify-items: center;
+}
+
+.photo-bottom img {
+  width: 238px;
+}
+
+footer {
+  text-align: center;
 }
