--- a/styles.css
+++ b/styles.css
@@ -135,3 +135,62 @@ header {
 footer {
   text-align: center;
 }
+
+@media (width < 400px) {
+  main {
+    margin: 19px;
+  }
+  header {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .header-left {
+    font-size: 30px;
+    margin-bottom: 30px;
+  }
+
+  .photo-top {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 60px;
+  }
+
+  .photo-bottom {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 60px;
+  }
+
+  .photo-bottom img {
+    width: 138px;
+  }
+
+  .photo-4 {
+    position: relative;
+    top: -150px;
+    left: 200px;
+  }
+
+  .photo-2,
+  .photo-5 {
+    padding-top: 60px;
+  }
+
+  .photo-5 {
+    margin-bottom: 0;
+    position: relative;
+    right: 200px;
+  }
+
+  .photo-6 {
+    position: relative;
+    left: 200px;
+    top: -150px;
+  }
+
+  .photo-top img {
+    width: 138px;
+  }
+}
